fixed p line-height (overlapping link highlights)

--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,7 @@ h4 {
 
 p {
   margin-bottom: 0.4em;
+  line-height: 1.4em;
 }
 
 dt {
